--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@ html, body {
   margin: 0;
 }
 
+/*Задаём глобальные параметры*/
 body {
-  background: #000;
+  background: black;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+/*Делаем границу вокруг игрового поля*/
 canvas {
-  border: 1px solid #fff;
+  border: 1px solid white;
 }
